# Helm

./: .env.example  .gitignore  01-visual-editor  03-login  04-templates  05-workflows  06-variables  07-connections  08-logs  09-settings  CLAUDE.md  CONTRIBUTING.md  FEATURE_FEEDBACK_3_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE_5B_IMPLEMENTATION.md  QUICKSTART.md  README.md  ROADMAP.md  TEMPLATE_FIXES.md  TEMPLATE_FIXES_SUMMARY.md  VARIABLE_PILL_FIXES.md  WORKFLOW_VARIABLES_FIXES.md  WORKFLOW_VARIABLES_FIXES_SUMMARY.md  console-all-pages.txt  console-errors-after-login.txt  dashboard-snapshot.txt  delete_legacy_pages.sh  docker-compose.yml  helm-live-test.js  helm-sdui-test.js  helm-sdui-test2.js  inject-home.py  login-page-after-failed-attempt.txt  login-page-snapshot.txt  network-all-pages.txt  network-requests-login.txt  package-lock.json  package.json  page-html.txt  (+15 more)
backend/: .dockerignore  .env.example  =6.0.0  Dockerfile  alembic.ini  fix_templates.py  helm.db  init_db.py  manage.py  pyproject.toml
backend/.omc/: project-memory.json
backend/agent/: agent.py  web.py
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py  providers.py
backend/scripts/: MIGRATION_README.md  migrate_session10_data.py  multi_user_smoke.py
backend/tests/: conftest.py  test_actions.py  test_admin.py  test_apps.py  test_auth.py  test_calendar.py  test_data_sources.py  test_devices.py  test_drafts.py  test_module_install.py  test_modules.py  test_notifications.py  test_providers.py  test_sandbox.py  test_sdui_parity.py  test_todos.py  (+9 more)
(+434 files in other folders)
